--- a/src/main/webapp/WEB-INF/vm/viewer_monitor.vm
+++ b/src/main/webapp/WEB-INF/vm/viewer_monitor.vm
@@ -27,7 +27,7 @@
 				                  <th>一次决定权</th>
 				                  <th>初试人数</th>
 				                  <th>初试通过人数</th>
-				                  <th>复试人数</th>
+				                  <th>复试通过人数</th>
 				                  <th>操作</th>
 				                </tr>
 				              </thead>
